For some reason jsvc kept using 100% of the CPU and getting out of memory errors. Here's a much simpler Tomcat control script which uses the default Tomcat startup/shutdown scripts and gives the JVM more heap memory.
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@15370 a8845c50-7012-0410-95d3-8e1449b9b1e4